# ytalk

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  configure.in  ytalk-3.4.0.tar.gz.sig
docs/: Makefile.in  ytalk.1.in
src/: Makefile.am  Makefile.in  cmdline-ytalk.c  cmdline-ytalk.h  comm.c  comm.h  cwin.c  cwin.h  err.c  err.h  exec.c  exec.h  fd.c  fd.h  getpty.c  getpty.h  gtalk.c  gtalk.h  header.h  main.c  mem.c  mem.h  menu.c  menu.h  ptyalloc.c  rc.c  rc.h  socket.c  socket.h  term.c  term.h  user.c  user.h  vt100.c  vt100.h  ytalk.ggo  ytypes.h
test/: Makefile.am  Makefile.in  get-pty.sh  sanity
