bin_PROGRAMS = ytalk

ytalk_SOURCES = \
	main.c \
	term.c \
	user.c \
	fd.c \
	comm.c \
	menu.c \
	socket.c \
	rc.c \
	exec.c \
	getpty.c \
	cwin.c \
	mem.c \
	vt100.c \
	gtalk.c \
	header.h \
	cwin.h \
	mem.h \
	socket.h \
	menu.h \
	gtalk.h

INCLUDES = -I..
LIBS = @LIBS@

DEFS = @DEFS@ @SYSTEM_DEFS@
